--- a/catalog.html
+++ b/catalog.html
@@ -42,7 +42,7 @@
           </a>
         </nav>
       </header>
-      <main class="main-catalog" data-test="main">
+      <main class="main-catalog  main-container" data-test="main">
         <section class="inner-header" data-test="hero">
           <h1 class="inner-header-title">Гостиницы Седоны</h1>
           <ol class="breadcrumbs clear-ul">
@@ -280,7 +280,7 @@
       <footer class="footer" data-test="footer">
         <section class="social">
           <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="social-list">
+          <ul class="social-list  clear-ul">
             <li class="social-item">
               <a class="social-item-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Vkontakte</span>
