--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <dev class="container">
+    <dev class="container container--page">
       <header class="page-header" data-test="header">
         <a class="page-header-logo" aria-current="page" href="index.html">
           <img class="page-header-logo-img" src="images/logo/logo-sedona.svg" width="140" height="70" alt="Логотип сайта города Седона">
@@ -41,7 +41,7 @@
           <a class="navigation-user-link navigation-user-link--btn" href="#"> Хочу сюда!</a>
         </nav>
       </header>
-      <main class="main-index" data-test="main">
+      <main class="main-index main-container" data-test="main">
         <h1 class="visually-hidden">Седона - город в Аризоне</h1>
         <section class="hero">
           <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
@@ -139,39 +139,40 @@
             <button class="subscribe-form-btn" type="submit">Подписаться</button>
           </form>
         </section>
-        <footer class="footer" data-test="footer">
-          <section class="social">
-            <h2 class="visually-hidden">Социальные сети</h2>
-            <ul class="social-list  clear-ul">
-              <li class="social-item">
-                <a class="social-item-link" href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">Vkontakte</span>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-item-link" href="https://t.me/htmlacademy">
-                  <span class="visually-hidden">Telegram</span>
-                </a>
-              </li>
-              <li class="social-item">
-                <a class="social-item-link" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Youtube</span>
-                </a>
-              </li>
-            </ul>
-          </section>
-          <section class="contacts">
-            <h2 class="visually-hidden">Телефон для связи</h2>
-            <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
-          </section>
-          <section class="site">
-            <h2 class="visually-hidden">Логотип HTMLAcademy</h2>
-            <a class="site-logo" href="https://htmlacademy.ru/">
-              <img class="site-logo-img" src="images/logo/logo-html-academy.svg" width="115" height="34" alt="Логотип HTMLAcademy">
-            </a>
-          </section>
-        </footer>
       </main>
+      <footer class="footer" data-test="footer">
+        <section class="social">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <ul class="social-list  clear-ul">
+            <li class="social-item">
+              <a class="social-item-link" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Vkontakte</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-item-link" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Telegram</span>
+              </a>
+            </li>
+            <li class="social-item">
+              <a class="social-item-link" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Youtube</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="contacts">
+          <h2 class="visually-hidden">Телефон для связи</h2>
+          <a class="contacts-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+        </section>
+        <section class="site">
+          <h2 class="visually-hidden">Логотип HTMLAcademy</h2>
+          <a class="site-logo" href="https://htmlacademy.ru/">
+            <img class="site-logo-img" src="images/logo/logo-html-academy.svg" width="115" height="34" alt="Логотип HTMLAcademy">
+          </a>
+        </section>
+      </footer>
+
     </dev>
   </body>
 
